# simpleConfig

./: .gitignore  CMakeLists.txt  README.md
config/: invalid.config  test.config
include/simpleConfig/: simpleConfig.hpp
src/: simpleConfig.cpp
tests/: CMakeLists.txt  main.cpp  simpleConfig_test.cpp
